# radio-robot-c

./: AGENTS.md  CLAUDE.md  README.md  build.py  codal.json  justfile  pyproject.toml
.clasi/: .clasi.db
.clasi/issues/: bench-otos-synthetic-otos-sensor-for-full-stack-bench-testing.md  chip-velocity-scale-bench-calibration.md  controller-rewrite-hybrid-drive-to-pose-base.md  firmware-architecture-refactor.md  firmware-ratio-pid-and-g-command.md  fr-bench-right-encoder-wedge.md  hardware-tick-actuator-state.md  issue-motion-system-overhaul.md  (+10 more)
.claude/: settings.json
config/: devices.json  dotconfig.yaml
data/robots/: tovez.json  (+1 more)
docs/: DEVICE_LINKING.md  architecture.md  kinematics-model.md  overview.md  protocol-v2.md  specification.md  usecases.md
host/: calibrate_angular.py  calibrate_linear.py  pyproject.toml
host_tests/: CLAUDE.md  CMakeLists.txt  conftest.py  demo_ekf_velocity_fusion.ipynb  demo_figure_eight.ipynb  firmware.py  playfield_tour.ipynb  sim_api.cpp  test_bench_otos.py  test_command_processor.py  test_d11_gate.py  test_dbg_otos_commands.py  test_lint.py  test_mock_hal.py  test_motion_controller.py  test_motor_controller.py  test_zz_comprehensive_bench_validation.py
mbdeploy/: README.md  pyproject.toml
mbdeploy/config/: dotconfig.yaml
mbdeploy/src/mbdeploy/: __init__.py  agent_manual.md  builder.py  cli.py  devices.py
mbdeploy/tests/: test_cli_flags.py  test_devices.py
scripts/: build_and_deploy.py  deploy.py  gen_default_config.py
source/: COMMANDS.md  main.cpp
tests/: CLAUDE.md  test_pursuit_arc_steering.py  test_tlm_stream.py
(+330 files in other folders)
