[project]
name = "microbit-v2-samples-tools"
version = "0.20260521.24"
description = "Utility scripts for building and deploying microbit-v2-samples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pyserial>=3.5",
]

[tool.uv]
package = false
