[project]
name = "mbdeploy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyocd>=0.44.1", "pyserial>=3.5"]

[project.scripts]
mbdeploy = "mbdeploy.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
